I6086: enhancement to the fix(textAlign:right)

--- a/static/css/restyle/restyle.less
+++ b/static/css/restyle/restyle.less
@@ -1217,6 +1217,7 @@ body:not(.developer-hub) section.secondary {
    .extra .button.disabled.not-available {
     background-position: right 6px center;
     padding: 5px 25px 5px 5px;
+    text-align: right;
   }
 }
 
